--- a/mathml-editor.html
+++ b/mathml-editor.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MathML editor</title>
     <link rel="stylesheet" href="https://onu032001.github.io/md-colors/colors.css">
-    <script src="../mathml-parser.js"></script>
+    <script src="./mathml-parser.js"></script>
     <style>
         body {
             background: linear-gradient(135deg, var(--md-blue-6), var(--md-light-green-6));
