Changed interface to Korean and added things in index.html

--- a/mathml-editor.html
+++ b/mathml-editor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,31 +55,55 @@
             height: 200px;
             resize: vertical;
         }
+        .compute-button {
+            text-decoration: none;
+            color: var(--md-blue-3);
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1 class="title">MathML editor</h1>
+        <!-- 제목 요소 -->
+        <h1 class="title">MathML 수식 편집기</h1>
+        <!-- 첫 번째 입출력 요소: MathML 수식 편집 영역 -->
         <div class="io-container">
-            <label for="MathMLInput"><b>Enter MathML:</b></label>
+            <label for="MathMLInput"><b>MathML 입력:</b></label>
+            <!-- MathML 수식 편집 영역 -->
             <textarea id="MathMLInput" class="input-area"></textarea>
         </div>
+        <!-- 두 번째 입출력 요소: MathML 결과 출력 영역 -->
         <div class="io-container">
-            <label for="result"><b>MathML Result:</b></label>
+            <label for="result"><b>MathML 출력 결과:
+                <!-- MathML 수식 계산 버튼 -->
+                <a class="compute-button" id="computeAnchor">이 MathML을 계산하세요.</a>
+            </b></label>
+            <!-- MathML 렌더링 결과 요소 -->
             <div id="result" class="math-container"></div>
         </div>
     </div>
     <script>
-        const MathMLInput = document.getElementById('MathMLInput');
-        const result = document.getElementById('result');
+        // 먼저 상수를 정의해야 JavaScript로 코딩을 할 수 있습니다.
+        const MathMLInput = document.getElementById('MathMLInput'); // MathML 수식 편집 영역을 가져오는 상수입니다.
+        const result = document.getElementById('result'); // MathML 렌더링 결과 요소를 가져오는 상수입니다.
+        const computeAnchor = document.getElementById('computeAnchor'); // MathML 수식 계산 버튼을 가져오는 상수입니다.
+
+        // ...그리고 함수를 정의해야 JavaScript로 코딩을 할 수 있습니다.
+        /** 
+         * 사용자가 MathML 수식 편집 영역에 입력한 코드를 MathML 렌더링 결과 요소를 HTML로 삽입합니다.
+         */
         function renderMathML() {
+            // MathML 수식 계산 버튼을 초기화합니다.
+            computeAnchor.setAttribute('src', '');
             if (MathMLInput.value.trim() === '') {
-                result.innerHTML = 'Please enter some code.';
+                result.innerHTML = 'MathML 요소 코드를 입력하세요.';
             } else {
                 const mmlCode = `<math display="block">${MathMLInput.value}</math>`;
                 result.innerHTML = mmlCode;
+                computeAnchor.setAttribute('src', mmlCode);
             }
         }
+
+        // MathML 수식 편집 영역에 무언가를 입력했을 때 MathML을 렌더링합니다.
         MathMLInput.addEventListener('input', renderMathML);
         renderMathML();
     </script>
