--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
     <p>여기에 있는 파일들을 확인해 보세요! 파일 목록은 다음과 같습니다:</p>
     <ol>
         <li>
-            <p><code>index.html</code>: 이 파일을 HTML로 변환한 것입니다.</p>
+            <p><a href="./README.md"><code>README.md</code></a>: 이 파일입니다.</p>
         </li>
         <li>
-            <p><code>mathml-editor.html</code>: MathML 수식 편집기입니다.</p>
+            <p><a href="./index.html"><code>index.html</code></a>: 이 파일입니다.</p>
         </li>
         <li>
-            <p><code>mathml-grapher.html</code>: GeeksForGeeks에서 가져온 그래프 계산기에서 MathML을 곁들인 그래프 계산기입니다.</p>
+            <p><a href="./mathml-editor.html"><code>mathml-editor.html</code></a>: MathML 수식 편집기입니다.</p>
         </li>
         <li>
-            <p><code>mathml-parser.js</code>: MathML 파서(MathML Parser, MathML을 파싱해서 JavaScript로 나타내는 스크립트)입니다.</p>
+            <p><a href="./mathml-grapher.html"><code>mathml-grapher.html</code></a>: GeeksForGeeks에서 가져온 그래프 계산기에서 MathML을 곁들인 그래프 계산기입니다.</p>
+        </li>
+        <li>
+            <p><a href="./mathml-parser.js"><code>mathml-parser.js</code></a>: MathML 파서(MathML Parser, MathML을 파싱해서 JavaScript로 나타내는 스크립트)입니다.</p>
         </li>
     </ol>
 </body>
