--- a/mathml-editor.html
+++ b/mathml-editor.html
@@ -56,16 +56,17 @@
             font-family: monospace;
             font-size: 13px;
         }
-        .button {
+        #unicode-input {
             border: 2px solid var(--md-indigo-10);
+            background: linear-gradient(135deg, var(--md-indigo-6), var(--md-green-6));
+            color: var(--md-neutral-1);
+            border-radius: 5px;
+        }
+        .button {
+            border: 2px solid var(--md-light-blue-10);
             background: linear-gradient(135deg, var(--md-light-blue-6), var(--md-light-green-6));
             color: var(--md-neutral-1);
             border-radius: 5px;
-            padding: 6px;
-            margin-top: 3px;
-            margin-bottom: 3px;
-            width: calc(100% - 14px);
-            height: 200px;
         }
         .compute-button {
             text-decoration: none;
