--- a/mathml-editor.html
+++ b/mathml-editor.html
@@ -61,12 +61,14 @@
             background: linear-gradient(135deg, var(--md-indigo-6), var(--md-green-6));
             color: var(--md-neutral-1);
             border-radius: 5px;
+            font-family: monospace;
         }
         .button {
             border: 2px solid var(--md-light-blue-10);
             background: linear-gradient(135deg, var(--md-light-blue-6), var(--md-light-green-6));
             color: var(--md-neutral-1);
             border-radius: 5px;
+            font-family: sans-serif;
         }
         .compute-button {
             text-decoration: none;
@@ -121,6 +123,7 @@
             MathMLInput.selectionStart = MathMLInput.selectionEnd = start + unicode.length;
             unicodeInput.value = "";
             MathMLInput.focus();
+            renderMathML();
         }
         
         /** 
