--- a/mathml-editor.html
+++ b/mathml-editor.html
@@ -82,7 +82,7 @@
         <h1 class="title">MathML 수식 편집기</h1>
         <!-- 첫 번째 입출력 요소: MathML 수식 편집 영역 -->
         <div class="io-container">
-            <label for="MathMLInput"><b>MathML 입력: (&lt;math xmlns="http://www.w3.org/1998/Math/MathML" display="block"&gt; 내부)</b><input id="unicode-input" style="resize: none;"><button class="button" id="unicode-insertion">유니코드 삽입</button></label>
+            <label for="MathMLInput"><b>MathML 입력: (&lt;math xmlns="http://www.w3.org/1998/Math/MathML" display="block"&gt; 내부)</b><br><input id="unicode-input" style="resize: none;"><button class="button" id="unicode-insertion">유니코드 삽입</button></label>
             <!-- MathML 수식 편집 영역 -->
             <textarea id="MathMLInput" class="input-area"></textarea>
         </div>
