--- a/mathml-editor.html
+++ b/mathml-editor.html
@@ -150,6 +150,10 @@
         // MathML 수식 편집 영역에 무언가를 입력했을 때 MathML을 렌더링합니다.
         MathMLInput.addEventListener('input', renderMathML);
         renderMathML();
+        unicodeInput.addEventListener('key', (event) => {
+            event.preventDefault();
+            insertUnicode();
+        });
     </script>
 </body>
 </html>
