--- a/mathml-editor.html
+++ b/mathml-editor.html
@@ -90,7 +90,7 @@
         <div class="io-container">
             <span><b>MathML 출력 결과:
                 <!-- MathML 수식 계산 버튼 -->
-                <a class="compute-button" id="computeAnchor">이 MathML을 계산하세요.</a>
+                <a class="compute-button" id="computeAnchor" target="_blank">이 MathML을 계산하세요.</a>
             </b></span>
             <!-- MathML 렌더링 결과 요소 -->
             <div id="result" class="math-container"></div>
